# mincodec

./: Cargo.toml  README.md  aliases.js  index.html  search-index.js  settings.html  source-files.js
.github/workflows/: build.yml
derive/: Cargo.toml
derive/src/: lib.rs
implementors/mincodec/: trait.MinCodecRead.js
mincodec/: all.html  derive.MinCodec.html  enum.AsyncReaderError.html  enum.AsyncWriterError.html  enum.BufPoll.html  enum.MapDeserializeError.html  enum.MapSerializeError.html  enum.OptionDeserialize.html  enum.ReadImmediateError.html  enum.WriteImmediateError.html  index.html  macro.buf_ok!.html  macro.buf_ok.html  macro.buf_ready!.html  macro.buf_ready.html  macro.buf_try!.html  macro.buf_try.html  macro.sufficient!.html  macro.sufficient.html  sidebar-items.js  struct.AsyncReader.html  struct.AsyncWriter.html  struct.Incomplete.html  struct.MapDeserialize.html  struct.MapSerialize.html  struct.ReadImmediate.html  struct.WriteImmediate.html  trait.Deserialize.html  trait.MinCodec.html  trait.MinCodecRead.html  trait.MinCodecReadExt.html  trait.MinCodecWrite.html  trait.MinCodecWriteExt.html  trait.Serialize.html
mincodec/allocated/: enum.StringReadError.html  enum.VecReadError.html  index.html  sidebar-items.js  struct.BytesSerialize.html  struct.StringDeserialize.html  struct.VecDeserialize.html  struct.VecSerialize.html
mincodec/array/: index.html  sidebar-items.js  struct.Array0001Deserialize.html  struct.Array0001Serialize.html  (+78 more)
src/: allocated.rs  array.rs  empty.rs  lib.rs  option.rs  primitive.rs  result.rs  tuple.rs
(+106 files in other folders)
